--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -11,8 +11,9 @@
         android:id="@+id/logohome"
         android:layout_width="@dimen/_50sdp"
         android:layout_height="@dimen/_50sdp"
-        android:layout_marginStart="@dimen/_7sdp"
-        android:layout_marginTop="@dimen/_7sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
 
         android:src="@drawable/logo"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,16 +34,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <ImageButton
-
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageButtonprofile"
         android:layout_width="@dimen/_50sdp"
         android:layout_height="@dimen/_50sdp"
-        android:layout_marginTop="@dimen/_7sdp"
-        android:layout_marginEnd="@dimen/_7sdp"
-        android:background="@null"
-        android:scaleType="center"
-        android:src="@drawable/profilepgoto"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:src="@drawable/img_4"
+        app:civ_border_color="@android:color/black"
+        app:civ_border_width="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -65,7 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppinsregular"
-        android:text="categories"
+        android:text="@string/app_namecategories"
         android:textColor="@color/black"
         android:textSize="@dimen/_15ssp"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewhome" />
@@ -100,7 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_20sdp"
         android:fontFamily="@font/poppinsbold"
-        android:text="collections"
+        android:text="@string/app_namecollections"
         android:textColor="@color/black"
         android:textSize="@dimen/_12ssp"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,11 +110,11 @@
 
 
     <ImageView
-        android:visibility="gone"
         android:id="@+id/imagecatogersbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_arrow_forward_24"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/recyclerViewhomecategories"
 
