--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,6 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".activities.ProfileActivity">
 
+    <LinearLayout
+        android:id="@+id/liniarprofileedit1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/backarrowprofileedit"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:src="@drawable/baseline_arrow_back_24" />
+
+        <TextView
+            android:id="@+id/textprofiletitle"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:text="personal info"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_15ssp"
+
+            />
+
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/profileImageView"
@@ -28,6 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_100sdp"
         android:layout_marginEnd="@dimen/_100sdp"
+        android:text="select_image"
         app:layout_constraintTop_toBottomOf="@+id/finalImage"
 
         ></Button>
@@ -35,10 +68,12 @@
 
     <Button
         android:id="@+id/uploadPhoto"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_100sdp"
         android:layout_marginEnd="@dimen/_100sdp"
+        android:text="upload image"
         app:layout_constraintTop_toBottomOf="@+id/buttonAddPhoto"></Button>
 
 
